k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: big-data-ingress
  namespace: big-data
spec:
  rules:
  - host: dashboard.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: streamlit
            port:
              number: 8501
  - host: airflow.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: airflow
            port:
              number: 8080
